<resources>
    <string name="app_name">Bohemea</string>
    <string name="facebook_app_id" translatable="false">1518499574947975</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1518499574947975</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN" translatable="false">ae9e560b8490b2a15bf70079042f1181</string>
    <string name="reset_request_fragment" translatable="false">reset_request</string>
    <string name="update_password_fragment" translatable="false">update_password</string>
    <string name="forget_password_saveInst" translatable="false">forget_password_saved_fragment</string>
    <string name="food_catrgory_model" translatable="false">food_category</string>
    <string name="foodCategoriesFragment_name" translatable="false">Category</string>
    <string name="foodItemFragment_name" translatable="false">food_item</string>
    <string name="reservation_bundle" translatable="false">reservation</string>
    <string name="internet_off">Something went wrong please check your internet connection and try again later</string>
    <string name="error">Something went wrong please try again later</string>
    <string name="phone_number_empty">required</string>
    <string name="am_string">AM</string>
    <string name="pm_string">PM</string>
    <string name="notifications_admin_channel_name" translatable="false">Global channel</string>
    <string name="notifications_admin_channel_description" translatable="false">Notifications sent from the app admin</string>
    <string name="notification_reservation_channel_name" translatable="false">Reservation Channel</string>
    <string name="notification_reservation_channel_description" translatable="false">Info about your reservation status</string>
    <string name="alert_phone_et_hint">Enter Your Phone Number …</string>
    <string name="alert_phone_required">*required</string>
    <string name="alert_phone_done_btn">Done</string>
    <string name="a_login_password">Password</string>
    <string name="a_login_new_user">Create Account</string>
    <string name="a_login_or">OR</string>
    <string name="a_login_sign_in">Sign In</string>
    <string name="a_login_username_email">E-mail</string>
    <string name="a_login_email_hint">E-mail</string>
    <string name="a_login_forgot_password">Forgot your password?</string>
    <string name="a_login_press_here">Press here</string>
    <string name="alert_phone_title">One more step …</string>
    <string name="a_register_phone_number">Phone Number</string>
    <string name="a_register_sign_up">Sign Up</string>
    <string name="a_register_username">Username</string>
    <string name="a_register_email_facebook_used_error">This email is linked to registered Facebook account , please choose another one or log in using your facebook account</string>
    <string name="a_register_email_used_error">This email is used by another account , please choose another one or log in using your Facebook account</string>
    <string name="a_login_invaled_password">Invalid email or password , check your info and try again</string>
    <string name="a_register_password_short">Password is too short</string>
    <string name="a_register_invalid_email_form">Invalid E-mail Address</string>
    <string name="a_login_wc_back">Welcome Back</string>
    <string name="a_register_successfully">Register Successfully</string>
    <string name="f_reset_request_cheack_email_toast">Please Check Your Email</string>
    <string name="f_reset_emailEdt_error_msg">Required</string>
    <string name="f_reset_request_wrong_email">This email is not registered</string>
    <string name="f_update_update_your_password">Update Your Password</string>
    <string name="f_update_password_enter_email">Enter Your Email</string>
    <string name="a_forget_password_send_request">Send Request</string>
    <string name="a_update_password_code">Code</string>
    <string name="f_update_password_new_password">Enter Your New Password Here</string>
    <string name="f_update_new_pass__small_hint">Password</string>
    <string name="f_update_successful">Password Updated Successfully</string>
    <string name="f_update_wrong_code">Wrong code , please check your email again</string>
    <string name="f_update_resend_code">Resend code</string>
    <string name="f_update_code_old">this code is older than 24 hours , please order a new one</string>
    <string name="a_main_reservation_btn">Make a Reservation</string>
    <string name="blocked_account">Your Account has been blocked</string>
    <string name="a_main_ads">ADS</string>
    <string name="a_main_bohemea_address">Cafe addresse: Alcournich, opposite of 8 Adar school, Safita</string>
    <string name="f_data_header">It usually takes less\n than a minute</string>
    <string name="f_data_chair_number">Table for ... one, two, three ..</string>
    <string name="f_data_date">Date</string>
    <string name="f_data_time">Time</string>
    <string name="f_table_header">Pick Your Favorite Table</string>
    <string name="table_frag_alert_send_table_number">Table Number: %1$s</string>
    <string name="table_frag_alert_send_message">Are you sure you want to pick this table</string>
    <string name="table_frag_alert_send_yesBtn">Yes</string>
    <string name="table_frag_alert_send_cancel_btn">OK</string>
    <string name="alert_done_menu_btn">MENU</string>
    <string name="alert_done_menu">Now go and check our menu</string>
    <string name="tabel_taken">Reserved</string>
    <string name="table_available">Available</string>
    <string name="table_selected">Selected</string>
    <string name="f_table_header_tow">Table</string>
    <string name="f_tabel_header_one">Select your</string>
    <string name="f_foodItem_add">Added To Cart</string>
    <string name="foodDetailActivity_food_price">%1$d  S.P</string>
    <string name="f_food_dialog_quantity">Quantity</string>
    <string name="f_food_dialog_closeBtn">Close</string>
    <string name="f_food_dialag_add_btn">Add to Cart</string>
    <string name="food_category_item_count">%1$d  items</string>
    <string name="total_cart_text">Total: %1$d  S.P</string>
    <string name="cart_done_dailog_done">Close</string>
    <string name="cart_act_btn_make_res_first">Make a Reservation First</string>
    <string name="cart_snackbar_remove">removed from cart!</string>
    <string name="cart_snackbar_undo">UNDO</string>
    <string name="a_cart_place_btn">Place Order</string>
    <string name="a_cart_addmore_btn">Add more items</string>
    <string name="a_cart_back_menu_btn">Back to Menu</string>
    <string name="a_cart_empty_text">Looks Like You Haven\'t Made Any Choice Yet …</string>
    <string name="cart_update_dialog_cancel">Cancel</string>
    <string name="cart_update_dialog_update">Update</string>
    <string name="food_menu_adapter_price_text">Price: %1$d  S.P</string>
    <string name="a_cart_fast_order_done">Thank You For Using Our App, Your Order Will Be Ready  Soon</string>
    <string name="a_cart_order_now_btn">ORDER NOW</string>
    <string name="a_cart_for_later_btn">FOR LATER</string>
    <string name="d_cart_later_choose_a_reservation">Choose a Reservation</string>
    <string name="d_cart_later_add_new_reservation">Add New Reservation</string>
    <string name="d_update_add_more_items">Add more Items</string>
    <string name="d_update">UPDATE</string>
    <string name="d_update_cancel">CANCEL</string>
    <string name="alert_done_all_done">All Done!</string>
    <string name="alert_done_send_notification">We will send you a notification when your reservation approved</string>
    <string name="alert_done_reservation_history">*go to Reservation List page to check your reservation history</string>
    <string name="update_phone_done">Done</string>
    <string name="alert_confirm_password_title">One more step …</string>
    <string name="a_profile_text_header1">Profile</string>
    <string name="a_profile_text_header2">settings</string>
    <string name="a_preferences_phone_edt">Edit your phone number</string>
    <string name="a_preferences_email_edit">Edit Your Email</string>
    <string name="a_preferences_password_edt">Edit Your Password</string>
    <string name="token_dosenot_ready">Your internet connection is slow please wait a minute and try again</string>
    <string name="f_table_choose_table_first">Please Choose Table First</string>
    <string name="a_white_blocked_text">Your Account Has Been Temporarily Blocked</string>
    <string name="a_white_call_btn">Call us</string>
    <string name="a_profile_sittings">Sittings</string>
    <string name="a_profile_log_out">Log Out</string>
    <string name="upload_image">Upload</string>
    <string name="a_pre_confirm_your_password">Confirm Your Password</string>
    <string name="res_history_list_empty_warning">You haven\'t made any reservation yet ....</string>
    <string name="total_res_history_j">Total: %1$d  S.P</string>
    <string name="res_his_show_btn">SHOW</string>
    <string name="f_res_history_header_one">Reservation</string>
    <string name="f_res_history_header_tow">List</string>
    <string name="f_res_history_waiting">Waiting</string>
    <string name="f_res_history_approved">Approved</string>
    <string name="history_summary_no_orders">No Orders</string>
    <string name="history_summary_submit_btn">Submit</string>
    <string name="res_history_show_btn">SHOW</string>
    <string name="order_history_header">Order Summary</string>
    <string name="order_history_name">Name</string>
    <string name="order_history_total">Total</string>
    <string name="order_his_f_update_done">done</string>
    <string name="order_his_f_totalTxt">%1$d  S.P</string>
    <string name="order_his_cancel_dialog_message">Are you sure you want to cancel this reservation</string>
    <string name="order_his_cancel_dialog_no">No</string>
    <string name="order_his_cancel_dialog_yes">Yse</string>
    <string name="order_his_cancel_dialog_done">Done</string>
    <string name="order_his_table_number">Table Number: %1$d</string>
    <string name="order_his_for_number">For: %1$d</string>
    <string name="cancel_this_reservation_btn">CANCEL THIS RESERVATION</string>
    <string name="a_pre_change_image">Change Image</string>
    <string name="decline">Reservation</string>
    <string name="d_reservation_declined">We\'re sorry we can\'t accept your reservation At this date</string>
    <string name="d_reservation_declined_time">Choose another time</string>
    <string name="d_reservation_declined_reservation">Reservation</string>
    <string name="d_reservation_declined_call_us">*for more info call</string>
    <string name="d_first_welcome">Welcome</string>
    <string name="d_first_order_now">If you are at the restaurant right now and want to make an order please choose ORDER NOW</string>
    <string name="d_first_for_later">OR if you want to make a pre order For your reservation please choose FOE LATER</string>
    <string name="a_pre_no_image">There is no image to upload!</string>
    <string name="a_pre_bohemea_user_only">You can not use this field because your registered in our app via facebook account</string>
    <string name="a_pre_uploded_successflly">Image uploaded successfully!</string>
    <string name="notifcation_accept">Reservation accepted</string>
    <string name="notification_declined">Reservation Declined</string>
    <string name="cancel_dailog_info">To Cancel Your Reservation before 2 hours from its starting time</string>
    <string name="cancel_dailog_call_uss">Please Call</string>
    <string name="f_res_history_passed">Passed</string>
    <string name="reservation_at_same_time">someone just make a reservation at this time please choose another one</string>
    <string name="do_not_show_this_again_first_time_dialog">Do not show this again</string>
</resources>