<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decline"
        android:textColor="@color/black"
        android:gravity="center"
        android:drawablePadding="8dp"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_decline"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:text="@string/d_reservation_declined"/>

    <RelativeLayout
        android:id="@+id/menu"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/d_reservation_declined_time"
            android:layout_centerVertical="true"/>

        <TextView
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/reservation_btn"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_reservation_declined_reservation"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#E2574C"
            android:drawableEnd="@drawable/ic_navigate_next_black_24dp"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:text="@string/d_reservation_declined_call_us"/>

        <TextView
            android:id="@+id/number1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="+963933557668"
            android:textSize="14sp"
            android:layout_marginEnd="24dp"/>

    </LinearLayout>






</LinearLayout>