<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="8dp"
    android:paddingTop="16dp"
    android:paddingBottom="4dp"
    android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_done_all_done"
            android:textColor="@color/black"
            android:gravity="center"
            android:drawablePadding="8dp"
            android:textSize="18sp"
            android:drawableStart="@drawable/ic_checked"
            android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:text="@string/alert_done_send_notification"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/alert_done_reservation_history"/>

</LinearLayout>