<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/dialog_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decline"
        android:textColor="@color/black"
        android:gravity="center"
        android:drawablePadding="8dp"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_decline"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/first_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:text="@string/cancel_dailog_info"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/second_b"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:text="@string/cancel_dailog_call_uss"/>

        <TextView
            android:id="@+id/number1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="+963933557668"
            android:textSize="14sp"
            android:layout_marginEnd="24dp"/>

    </LinearLayout>

</LinearLayout>