<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_bg"
    tools:context=".history.ReservationFragment">


    <!--Empty Layout-->
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/empty_history_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:background="@android:color/transparent"
        >


        <ImageView
            android:id="@+id/empty_cart_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_shelves"
            android:translationY="-32dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/empty_history_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_below="@id/empty_cart_image"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal"
            android:text="@string/res_history_list_empty_warning"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/empty_history_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_violet_btn"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/empty_history_text"
            android:layout_marginTop="32dp"
            android:text="@string/a_main_reservation_btn"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            />

    </RelativeLayout>



        <LinearLayout
            android:id="@+id/text_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp">

            <TextView
                android:id="@+id/text_header1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f_res_history_header_one"
                android:textColor="#ffffff"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                />

            <TextView
                android:layout_marginStart="8dp"
                android:id="@+id/text_header2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f_res_history_header_tow"
                android:textColor="#ffffff"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:visibility="visible"
            android:id="@+id/res_history_rv"
            android:layout_below="@id/text_header"
            android:layout_marginTop="24dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="100dp"/>


        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>





</RelativeLayout>