<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".login.UpdatePasswordFragment"
    android:orientation="vertical"
    android:weightSum="4">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">


        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/code_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/a_update_password_code"
            android:textColorHint="#FFFFFF"
            android:theme="@style/editTextColored">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_unlock"
                android:drawablePadding="16dp"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/code_container"
            android:layout_marginStart="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/f_update_password_new_password"
            android:textColorHint="#FFFFFF"
            android:theme="@style/editTextColored">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="16dp"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/update_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/new_password_container"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/roundcornerred"
            android:text="@string/f_update_update_your_password"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/resend_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/update_password"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"
            android:text="@string/f_update_resend_code"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>